# NewBrain

./: .gitignore  README.md  pyproject.toml
src/newbrain/mge/domain/aggregates/: ExpedienteMGE.py  __init__.py
src/newbrain/mge/domain/entities/: DistritoElectoralFederal.py  DistritoElectoralLocal.py  EntidadFederativa.py  LimiteLocalidad.py  LocalidadPuntual.py  Manzana.py  Municipio.py  ProcesoElectoral.py  SeccionElectoral.py
tests/: test_entities_mge.py  test_expediente_mge.py
